WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180247
Cursor is not visible after exiting full screen video
https://bugs.webkit.org/show_bug.cgi?id=180247
Summary
Cursor is not visible after exiting full screen video
Antoine Quint
Reported
2017-12-01 07:38:13 PST
When playing a video in fullscreen and letting the mouse cursor be idle for 3 seconds, the cursor disappears. However, if you press Esc. to exit fullscreen, the cursor remains hidden and moving the mouse still has the cursor hidden. Only mousing out of the browser window brings the cursor back.
Attachments
Patch
(2.20 KB, patch)
2017-12-01 07:47 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-elcapitan
(2.14 MB, application/zip)
2017-12-01 08:43 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(2.54 MB, application/zip)
2017-12-01 08:55 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews113 for mac-elcapitan
(2.89 MB, application/zip)
2017-12-01 09:06 PST
,
EWS Watchlist
no flags
Details
Patch
(6.06 KB, patch)
2017-12-04 05:12 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2017-12-01 07:38:26 PST
<
rdar://problem/33885922
>
Antoine Quint
Comment 2
2017-12-01 07:47:47 PST
Created
attachment 328090
[details]
Patch
Antoine Quint
Comment 3
2017-12-01 08:33:52 PST
This bug seems to have been introduced in
https://bugs.webkit.org/show_bug.cgi?id=107601
.
EWS Watchlist
Comment 4
2017-12-01 08:43:34 PST
Comment on
attachment 328090
[details]
Patch
Attachment 328090
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/5446382
New failing tests: fullscreen/video-cursor-auto-hide.html
EWS Watchlist
Comment 5
2017-12-01 08:43:36 PST
Created
attachment 328093
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 6
2017-12-01 08:55:17 PST
Comment on
attachment 328090
[details]
Patch
Attachment 328090
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5446479
New failing tests: fullscreen/video-cursor-auto-hide.html
EWS Watchlist
Comment 7
2017-12-01 08:55:18 PST
Created
attachment 328096
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 8
2017-12-01 09:06:40 PST
Comment on
attachment 328090
[details]
Patch
Attachment 328090
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/5446523
New failing tests: fullscreen/video-cursor-auto-hide.html
EWS Watchlist
Comment 9
2017-12-01 09:06:41 PST
Created
attachment 328097
[details]
Archive of layout-test-results from ews113 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Antoine Quint
Comment 10
2017-12-04 05:12:16 PST
Created
attachment 328342
[details]
Patch
Dean Jackson
Comment 11
2017-12-04 14:13:50 PST
Comment on
attachment 328342
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328342&action=review
> Source/WebCore/ChangeLog:16 > + No test provided as I don't believe this platform behavior can be tested, there is no API to query > + whether the cursor is visible.
There must be!
Antoine Quint
Comment 12
2017-12-04 14:25:14 PST
(In reply to Dean Jackson from
comment #11
)
> Comment on
attachment 328342
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=328342&action=review
> > > Source/WebCore/ChangeLog:16 > > + No test provided as I don't believe this platform behavior can be tested, there is no API to query > > + whether the cursor is visible. > > There must be!
There was CGCursorIsVisible but it's been deprecated without a known replacement and is now non-functional.
WebKit Commit Bot
Comment 13
2017-12-04 14:47:07 PST
Comment on
attachment 328342
[details]
Patch Clearing flags on attachment: 328342 Committed
r225494
: <
https://trac.webkit.org/changeset/225494
>
WebKit Commit Bot
Comment 14
2017-12-04 14:47:09 PST
All reviewed patches have been landed. Closing bug.
mitz
Comment 15
2017-12-30 13:37:52 PST
(In reply to WebKit Commit Bot from
comment #13
)
> Comment on
attachment 328342
[details]
> Patch > > Clearing flags on attachment: 328342 > > Committed
r225494
: <
https://trac.webkit.org/changeset/225494
>
This caused
bug 181193
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug